Fix user-list item text-overflow

--- a/bigbluebutton-html5/imports/ui/components/user-list/user-list-content/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/user-list/user-list-content/styles.scss
@@ -82,6 +82,8 @@
     text-align: left;
     padding-left: var(--lg-padding-y);
     text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 
     [dir="rtl"] & {
       text-align: right;
